tests/negative/neg_pr113_access_tuple_element.safe
package neg_PR113_Access_Tuple_Element
   type int_Access is access integer;
   value : (int_Access, integer);

